suresh_241025_806pm